fix Hierarchy and FullHierarchy vertical align

--- a/src/components/FullHierarchyTable/FullHierarchyTable.less
+++ b/src/components/FullHierarchyTable/FullHierarchyTable.less
@@ -40,6 +40,10 @@
                 color: rgb(187, 187, 187);
             }
         }
+
+        .ant-table .ant-table-row {
+            vertical-align: top;
+        }
     }
 }
 
