--- a/src/components/HierarchyTable/HierarchyTable.less
+++ b/src/components/HierarchyTable/HierarchyTable.less
@@ -16,6 +16,9 @@
             .ant-table-selection-column {
                 vertical-align: top;
             }
+            .ant-table-row {
+                vertical-align: top;
+            }
         }
     }
 }
@@ -38,10 +41,5 @@
 }
 
 .selectColumn {
-    vertical-align: top;
     text-align: center;
-}
-
-.numberColumn {
-    vertical-align: top;
 }
